projects/12-kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: web
        image: aynazabbaspourstar2/aynazabbaspour:v4.2.0
        ports:
        - containerPort: 5000
