projects/12-kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
